# asset-packer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
application/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/include/: asset-packer.hpp  byte-helpers.hpp  file-table.hpp  file.hpp  pack-reader.hpp  pack-writer.hpp  progress-function.hpp
lib/src/: file-table.cpp  file.cpp  pack-reader.cpp  pack-writer.cpp
tests/: test.cpp
